objects/ASI_CRM_Order_Quantity__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Call_Log__c</fullName>
        <label>Call Log</label>
        <referenceTo>ASI_CRM_Call_Log__c</referenceTo>
        <relationshipLabel>Order Quantities</relationshipLabel>
        <relationshipName>Order_Quantities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <formula>ASI_CRM_Call_Log__r.ASI_CRM_Visit_Date__c</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Order Quantity</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN CRM Item Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_Used_by_MOT__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Order Quantities</relationshipLabel>
        <relationshipName>Order_Quantities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Quantity_Btl__c</fullName>
        <label>Order Quantity (Btl)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <formula>ASI_CRM_Call_Log__r.ASI_CRM_AccountsAdditionalField__r.Name</formula>
        <label>Outlet</label>
        <type>Text</type>
    </fields>
    <label>Order Quantity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OQ-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Quantities</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Order_Quantity</fullName>
        <active>true</active>
        <label>CN Order Quantity</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>